[styles/screen] further fix footer text alignment in sheet-less mode

--- a/styles/screen.styl
+++ b/styles/screen.styl
@@ -291,7 +291,7 @@ body > footer
   text-shadow: 1px 1px $outer-text-shadow;
  else
   margin-top: 1.25em;
-  padding-left: ($width-header-plus / 2);
-  padding-right: ($width-header-plus / 2);
+  padding-left: ($width-header-plus / 2) + 0.0625em;
+  padding-right: ($width-header-plus / 2) + 0.0625em;
 
 @import "mobile"
